...
import androidx.compose.material.icons.filled.Home
import androidx.compose.material.icons.filled.Person
import androidx.compose.material.icons.filled.Receipt
import androidx.compose.ui.graphics.vector.ImageVector

sealed class BottomNavItem(val route: String, val icon: ImageVector, val label: String) {
    object Dashboard : BottomNavItem("dashboard", Icons.Filled.Home, "Dashboard")

    object Transactions : BottomNavItem("transaction_list", Icons.Filled.Receipt, "Transactions")

    object Reports : BottomNavItem("reports_screen", Icons.Filled.Assessment, "Reports")

    object Profile : BottomNavItem("profile", Icons.Filled.Person, "Profile")
}

...
